  documentation for the API users. Users are thus autonomous to explore 
  the metadata and schema of the exposed databases.  
  
- StatementAnalyzer has been retrofitted with an external heavily used 
  and highly supported SQL parser (JSqlParser).
  
- Tomcat base libraries have been updated to 8.5.50 (Security requirements). 
   

AceQL HTTP Version 3.2.2 - 16-Sep-2019
--------------------------------------

Bugs fixed:
- DECIMAL SQL type passed from client side was ignored. Thus has been fixed.
- DATE, TIME, TIMESTAMP could be malformed when called from a stored
  procedure this has been fixed.
 What's new:
- Update Tomcat base libraries to 8.5.45 (Security requirements). 



AceQL HTTP Version 3.2.1 - 10-aug-2019
---------------------------------------

Bugs fixed:
- aceql-server -stop was returning -1 exit code instead of 0. It
  could cause a problem when using CI tools like Jenkins. This has been fixed.
 

AceQL HTTP Version 3.2 - 23-apr-2019
------------------------------------

What's new:
- Update Tomcat base libraries to 8.5.40 (Security requirements).

  
AceQL HTTP Version 3.1 - 24-dec-2018
------------------------------------

What's new:
- destroy() call has been added to main servlet ServerSqlManager for
  clean shutdown of ThreadPoolExecutor without warnings. 

Bugs fixed:
- HttpServletRequestHolder could in rare cases collide request parameters 
  from concurrent clients. This has been fixed. 


AceQL HTTP Version 3.0 - 17-dec-2018
------------------------------------

- AceQL open source / Community Edition now supports all main database
  vendors.
- Main servlet is now async for better reliability and performances.
- DatabaseConfigurator.allowStatementAfterAnalysis method 
  has been renamed to allowSqlRunAfterAnalysis for the sake of
  clarity.
- Uses newest Tomcat 8.5.35 embedded libraries for security reasons.
- Update other misc Maven dependencies.


AceQL HTTP Version 2.1 - 18-jun-2018
------------------------------------

What's new:
