@@ -168,7 +168,7 @@ kawansoft_example.rollbackOnReturn=true
 
 #kawansoft_example.sqlFirewallManagerClassNames=\
 #    org.kawanfw.sql.api.server.firewall.DenyExecuteUpdateManager,\
-#    org.kawanfw.sql.api.server.firewall.DenyMetadataQueryManager
+#     org.kawanfw.sql.api.server.firewall.DenyMetadataQueryManager
 
 # Other built-in and ready to use Firewall Engines, see Javadoc: 
 #   org.kawanfw.sql.api.server.firewall.DenyDclManager,\
